@startuml

title __HANDLER's Class Diagram__\n

  namespace io.github.johnytech6 {
    namespace Handler {
      class io.github.johnytech6.Handler.DMHandler {
          - dms : HashMap<UUID, Dm>
          - isSessionStarted : boolean
          - plugin : Plugin
          + DMHandler()
          + ToggleDmMode()
          + addDm()
          + endSession()
          + getDm()
          + getDms()
          + isPlayerDm()
          + isSessionStarted()
          + removeDm()
          + setDmMode()
          + startSession()
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace Handler {
      class io.github.johnytech6.Handler.HeroHandler {
          - heros : HashMap<UUID, Hero>
          - plugin : Plugin
          + HeroHandler()
          + addHero()
          + freezeAllHeros()
          + getHero()
          + getHeroUUIDByName()
          + getHeros()
          + isPlayerHero()
          + removeHero()
          + unfreezeAllHeros()
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace Handler {
      class io.github.johnytech6.Handler.PluginHandler {
          - dndPlayers : HashMap<UUID, DndPlayer>
          - offlineDndPlayers : HashMap<UUID, OfflineDndPlayer>
          - plugin : Plugin
          + PluginHandler()
          + addDndPlayer()
          + getDmHandler()
          + getDndPlayer()
          + getDndPlayers()
          + getHeroHandler()
          + getOfflineDndPlayer()
          + getPlugin()
          + getPuppeterHandler()
          + isOfflineDndPlayers()
          + isPlayerDndPlayer()
          + johnytech6Stat()
          + loadOfflinePlayer()
          + loadPlayerConfig()
          + removeDndPlayer()
          + removeOfflineDndPlayers()
          + saveInvisbility()
          + saveNightVision()
          + savePlayerChairPosition()
          + savePlayerCheckpoint()
          + savePuppeterPower()
          + saveTeftPower()
          - getRole()
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace Handler {
      class io.github.johnytech6.Handler.PuppeterHandler {
          - morphedPuppeters : HashMap<UUID, Puppeter>
          - puppeters : HashMap<UUID, Puppeter>
          + AddMorphPuppeter()
          + AddPuppeter()
          + GetMorphPuppeter()
          + Morph()
          + MorphInArmorStand()
          + PuppeterHandler()
          + RemoveMorphPlayer()
          + RemovePuppeter()
          + TogglePuppeterMode()
          + Unmorph()
          + UnmorphMob()
          + UnmorphOfArmorStand()
          + getMorphPlayers()
          + getPuppeter()
          + getPuppeters()
          + isPlayerMorph()
          + isPlayerPuppeter()
          + setPuppeterMode()
          - giveArmorOfAT()
          - itemInHand()
          - removeEquipmentFromAS()
          - storeArmorStandEquipment()
      }
    }
  }
  

  io.github.johnytech6.Handler.DMHandler o-- io.github.johnytech6.Handler.HeroHandler : hh
  io.github.johnytech6.Handler.DMHandler o-- io.github.johnytech6.Handler.PluginHandler : ph
  io.github.johnytech6.Handler.DMHandler o-- io.github.johnytech6.Handler.PuppeterHandler : pph
  io.github.johnytech6.Handler.HeroHandler o-- io.github.johnytech6.Handler.PluginHandler : ph
  io.github.johnytech6.Handler.PluginHandler o-- io.github.johnytech6.Handler.DMHandler : dmHandler
  io.github.johnytech6.Handler.PluginHandler o-- io.github.johnytech6.Handler.HeroHandler : heroHandler
  io.github.johnytech6.Handler.PluginHandler o-- io.github.johnytech6.Handler.PuppeterHandler : puppeterHandler
  io.github.johnytech6.Handler.PuppeterHandler o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.Handler.PuppeterHandler o-- io.github.johnytech6.Handler.PluginHandler : pluginHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
